<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_settings"
          android:icon="@drawable/ic_menu_manage"
          android:title="@string/menu_settings" />     
    
    <item android:id="@+id/menu_share"
          android:icon="@drawable/ic_menu_share"
          android:title="@string/menu_share" />
                
    <item android:id="@+id/menu_about"
          android:icon="@drawable/ic_menu_info_details"
          android:title="@string/menu_about" />
    
    <item android:id="@+id/menu_feedback"
          android:icon="@drawable/ic_menu_send"
          android:title="@string/menu_feedback" />
          
    <item android:id="@+id/menu_exit"
          android:icon="@drawable/ic_menu_close_clear_cancel"
          android:title="@string/menu_exit" />
</menu>